--- a/style/style.css
+++ b/style/style.css
@@ -33,7 +33,7 @@ body {
   gap: 1rem;
   margin: auto;
   padding: 2rem;
-  width: min(90vw, 550px);
+  width: min(90vw, 800px);
   border-radius: 15px;
   box-shadow: 0 2px 25px 1px hsl(292, 42%, 14%);
   background-color: hsl(0, 0%, 100%);
@@ -98,6 +98,8 @@ body {
 .container .panel {
   font-size: clamp(0.8rem, 2.3vw, 1rem);
   line-height: 1.7rem;
+  width: 95%;
+  padding-right: 1.2rem;
 }
 .container .panel > p {
   display: none;
@@ -116,7 +118,7 @@ body {
 }
 
 .attribution {
-  font-size: 14px;
+  font-size: clamp(0.8rem, 2.3vw, 1rem);
   text-align: center;
   padding: 1rem;
   background-color: hsl(275, 100%, 97%);
@@ -135,6 +137,8 @@ body {
   }
   .container .panel {
     line-height: 1.1rem;
+    padding-right: 0.5rem;
+    width: 100%;
   }
 }
 @media screen and (600px < width < 850px) {
