--- a/style/style.scss
+++ b/style/style.scss
@@ -30,7 +30,7 @@ body {
     
     margin: auto;
     padding: 2rem;
-    width: min(90vw, 550px);
+    width: min(90vw, 800px);
     border-radius: 15px;
 
     box-shadow: 0 2px 25px 1px $clr-dark-purple;
@@ -113,6 +113,8 @@ body {
     .panel {
         font-size: clamp(.8rem, 2.3vw, 1rem);
         line-height: 1.7rem;
+        width: 95%;
+        padding-right: 1.2rem;
         
         > p {
             display: none;
@@ -136,7 +138,7 @@ body {
 
 // footer attribution
 .attribution { 
-    font-size: 14px; 
+    font-size: clamp(.8rem, 2.3vw, 1rem);
     text-align: center; 
     padding: 1rem;
     
@@ -157,9 +159,11 @@ body {
             gap: 1rem;
         }
         
-            .panel {
-                line-height: 1.1rem;
-            }
+        .panel {
+            line-height: 1.1rem;
+            padding-right: .5rem;
+            width: 100%;
+        }
     }
 }
 
