--- a/style/style.scss
+++ b/style/style.scss
@@ -30,7 +30,7 @@ body {
     
     margin: auto;
     padding: 2rem;
-    width: min(90vw, 800px);
+    width: min(90vw, 700px);
     border-radius: 15px;
 
     box-shadow: 0 2px 25px 1px $clr-dark-purple;
@@ -79,13 +79,15 @@ body {
             text-align: left;
             font-weight: $fw-bold;
             font-size: 2.6vw;
-            font-size: clamp(1.1em, 2.6vw, 1.5em);
+            font-size: clamp(1.1em, 2.6vw, 1.3em);
         }
         
         .icon {
             overflow: hidden;
             display: grid;
             grid-template-areas: 'icon-place';
+            justify-content: right;
+            align-items: center;
 
             width: 10%;
         }
@@ -111,10 +113,9 @@ body {
     }
     
     .panel {
-        font-size: clamp(.8rem, 2.3vw, 1rem);
+        font-size: clamp(.8rem, 2.3vw, .9rem);
         line-height: 1.7rem;
-        width: 95%;
-        padding-right: 1.2rem;
+        padding-right: 2rem;
         
         > p {
             display: none;
@@ -138,7 +139,7 @@ body {
 
 // footer attribution
 .attribution { 
-    font-size: clamp(.8rem, 2.3vw, 1rem);
+    font-size: clamp(.8rem, 2.3vw, .9rem);
     text-align: center; 
     padding: 1rem;
     
