--- a/style/style.css
+++ b/style/style.css
@@ -104,8 +104,6 @@ body {
 }
 .container .panel > p {
   display: none;
-  opacity: 0;
-  height: 0;
   padding-bottom: 1.5rem;
 }
 .container .separator {
@@ -114,10 +112,21 @@ body {
 
 .panel.active > p {
   display: block;
-  height: auto;
-  opacity: 1;
+  animation: slideIn 0.3s ease forwards;
 }
 
+@keyframes slideIn {
+  from {
+    visibility: hidden;
+    height: 0;
+    opacity: 0;
+  }
+  to {
+    visibility: visible;
+    height: 100%;
+    opacity: 1;
+  }
+}
 .attribution {
   font-size: clamp(0.8rem, 2.3vw, 0.9rem);
   text-align: center;
