--- a/style/style.scss
+++ b/style/style.scss
@@ -14,7 +14,7 @@ body {
     background-color: $clr-light-pink;
 }
 
-// backgound
+// background
 .top-background {
     > * {
         width: 100%;
@@ -36,7 +36,7 @@ body {
     box-shadow: 0 2px 25px 1px $clr-dark-purple;
     background-color: $clr-white;
     
-    // accoirdion container title
+    // accordion container title
     .title {
         display: inline-flex;
         justify-content: start;
@@ -119,8 +119,6 @@ body {
         
         > p {
             display: none;
-            opacity: 0;
-            height: 0;
             padding-bottom: 1.5rem;
         }
     }
@@ -132,10 +130,21 @@ body {
 
 .panel.active > p {
     display: block;
-    height: auto;
-    opacity: 1;
+    animation: slideIn .3s ease forwards;
 }
 
+@keyframes slideIn {
+    from {
+        visibility: hidden;
+        height: 0;
+        opacity: 0;
+    }
+    to {
+        visibility: visible;
+        height: 100%;
+        opacity: 1;
+    }
+}
 
 // footer attribution
 .attribution { 
